# imghdr2

./: LICENSE  README.rst  pyproject.toml
